DTGB-485: Fixed whitespace between overview title and colon.

--- a/components/21-atoms/heading/css/_overview-title.scss
+++ b/components/21-atoms/heading/css/_overview-title.scss
@@ -22,7 +22,7 @@ h6 {
           line-height: .5;
           content: ':';
           speak: none;
-          vertical-align: -8%;
+          vertical-align: -11%;
         }
       }
     }
